<resources>
    <string name="app_name">FamilyMapClient</string>

    <!-- Strings related to login -->
    <string name="prompt_server_host">Server Host</string>
    <string name="prompt_server_port">Server Port</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_gender">Gender</string>

    <string name="title_server_host">Server Host:</string>
    <string name="title_server_port">Server Port:</string>
    <string name="title_username">Username:</string>
    <string name="title_email">Email:</string>
    <string name="title_password">Password:</string>
    <string name="title_firstName">First Name:</string>
    <string name="title_lastName">Last Name:</string>
    <string name="title_gender">Gender:</string>

    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>

    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
